force-app/main/default/objects/video_transcript__c/video_transcript__c.object-meta.xml
<CustomObject>
    <label>video transcript</label>
    <nameField>
        <displayFormat>vt-{00000000}</displayFormat>
        <label>name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>video transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>