force-app/main/default/objects/video_transcript__c/fields/channel__c.field-meta.xml
<CustomField>
    <fullName>channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>channel</label>
    <referenceTo>channel__c</referenceTo>
    <relationshipLabel>video transcripts</relationshipLabel>
    <relationshipName>video_transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>