force-app/main/default/objects/video_transcript__c/fields/transcript__c.field-meta.xml
<CustomField>
    <fullName>transcript__c</fullName>
    <label>transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>