force-app/main/default/objects/video_transcript__c/fields/video_id__c.field-meta.xml
<CustomField>
    <fullName>video_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>video id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>