force-app/main/default/objects/video_transcript__c/listViews/All_Transcripts_without_channel_assignme.listView-meta.xml
<ListView>
    <fullName>All_Transcripts_without_channel_assignme</fullName>
    <columns>NAME</columns>
    <columns>video_id__c</columns>
    <columns>channel__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>channel__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Transcripts without channel assignme</label>
</ListView>